[gd_scene load_steps=39 format=3 uid="uid://m7s3xp2xoqfy"]

[ext_resource type="Texture2D" uid="uid://fyjb3wkqwkd0" path="res://resources/sprites/wcaleniestocktlo.jpeg" id="1_7xv4b"]
[ext_resource type="AudioStream" uid="uid://bjv2joeyhwiht" path="res://resources/sounds/rolling-dice-2-102706.mp3" id="2_ysa8a"]
[ext_resource type="Script" path="res://scripts/DiceManager.gd" id="3_d6ogl"]
[ext_resource type="Texture2D" uid="uid://chomilp4fcoei" path="res://resources/sprites/dice_blank.png" id="4_seqyf"]
[ext_resource type="Texture2D" uid="uid://cngl825iogtkt" path="res://resources/sprites/dice_blank_selected.png" id="5_covew"]
[ext_resource type="Script" path="res://scripts/Dice.gd" id="6_8abxr"]
[ext_resource type="Texture2D" uid="uid://brocaxjf0csnc" path="res://resources/sprites/attack.png" id="7_bocvb"]
[ext_resource type="Script" path="res://scripts/ActionHandler.gd" id="8_2bhmu"]
[ext_resource type="Texture2D" uid="uid://dcwa3irn113l8" path="res://resources/sprites/attack+.png" id="9_00qxl"]
[ext_resource type="Texture2D" uid="uid://0438thmurme3" path="res://resources/sprites/defense.png" id="10_cwe2b"]
[ext_resource type="Texture2D" uid="uid://s86emd55fdhu" path="res://resources/sprites/defense+.png" id="11_wp3wu"]
[ext_resource type="Texture2D" uid="uid://b6oas1x5edqdw" path="res://resources/sprites/special.png" id="12_0plxn"]
[ext_resource type="Script" path="res://scripts/Player.gd" id="13_neu1h"]
[ext_resource type="Script" path="res://scripts/Stats.gd" id="13_rpiqy"]

[sub_resource type="InputEventKey" id="InputEventKey_gpx1j"]
device = -1
pressed = true
keycode = 32
physical_keycode = 32
key_label = 32
unicode = 32

[sub_resource type="Shortcut" id="Shortcut_h1jpe"]
events = [SubResource("InputEventKey_gpx1j")]

[sub_resource type="InputEventKey" id="InputEventKey_xc8jq"]
device = -1
keycode = 4194442
unicode = 52

[sub_resource type="Shortcut" id="Shortcut_xpydi"]
events = [SubResource("InputEventKey_xc8jq")]

[sub_resource type="InputEventKey" id="InputEventKey_vwybg"]
device = -1
keycode = 4194443
unicode = 53

[sub_resource type="Shortcut" id="Shortcut_2hsbf"]
events = [SubResource("InputEventKey_vwybg")]

[sub_resource type="InputEventKey" id="InputEventKey_4u7mm"]
device = -1
keycode = 4194444
unicode = 54

[sub_resource type="Shortcut" id="Shortcut_2eif3"]
events = [SubResource("InputEventKey_4u7mm")]

[sub_resource type="InputEventKey" id="InputEventKey_oko5g"]
device = -1
keycode = 4194439
unicode = 49

[sub_resource type="Shortcut" id="Shortcut_kbdob"]
events = [SubResource("InputEventKey_oko5g")]

[sub_resource type="InputEventKey" id="InputEventKey_utf5r"]
device = -1
keycode = 4194440
unicode = 50

[sub_resource type="Shortcut" id="Shortcut_3fgaf"]
events = [SubResource("InputEventKey_utf5r")]

[sub_resource type="InputEventKey" id="InputEventKey_q1erg"]
device = -1
keycode = 4194441
unicode = 51

[sub_resource type="Shortcut" id="Shortcut_evova"]
events = [SubResource("InputEventKey_q1erg")]

[sub_resource type="InputEventKey" id="InputEventKey_s2ad0"]
device = -1
pressed = true
keycode = 70
unicode = 102

[sub_resource type="Shortcut" id="Shortcut_rhfiy"]
events = [SubResource("InputEventKey_s2ad0")]

[sub_resource type="InputEventKey" id="InputEventKey_tfu7m"]
device = -1
keycode = 71
unicode = 103

[sub_resource type="Shortcut" id="Shortcut_g3nbu"]
events = [SubResource("InputEventKey_tfu7m")]

[sub_resource type="InputEventKey" id="InputEventKey_sd1du"]
device = -1
keycode = 86
unicode = 118

[sub_resource type="Shortcut" id="Shortcut_ggk13"]
events = [SubResource("InputEventKey_sd1du")]

[sub_resource type="InputEventKey" id="InputEventKey_iheks"]
device = -1
keycode = 66
unicode = 98

[sub_resource type="Shortcut" id="Shortcut_0pd6j"]
events = [SubResource("InputEventKey_iheks")]

[sub_resource type="Shortcut" id="Shortcut_g0snw"]

[sub_resource type="GDScript" id="GDScript_5vr14"]
script/source = "extends ProgressBar
func _ready():
	var sb = StyleBoxFlat.new()
	add_theme_stylebox_override(\"fill\", sb)
	sb.bg_color = Color(\"ff0000\")
"

[node name="main_scene" type="Node2D"]

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.701961)
show_behind_parent = true
offset_left = -582.0
offset_top = -328.0
offset_right = 586.0
offset_bottom = 327.0
texture = ExtResource("1_7xv4b")
metadata/_edit_use_anchors_ = true

[node name="Roll" type="Button" parent="."]
offset_left = -561.0
offset_top = -103.0
offset_right = -449.96
offset_bottom = -72.0
scale = Vector2(2.675, 2.675)
shortcut = SubResource("Shortcut_h1jpe")
text = "Roll"
metadata/_edit_use_anchors_ = true

[node name="sound" type="AudioStreamPlayer2D" parent="."]
position = Vector2(-561, -103)
scale = Vector2(2.675, 2.675)
stream = ExtResource("2_ysa8a")

[node name="Dices" type="Node2D" parent="."]
position = Vector2(-563, -310)
script = ExtResource("3_d6ogl")

[node name="Dice1" type="TextureButton" parent="Dices"]
offset_right = 100.0
offset_bottom = 100.0
focus_mode = 0
toggle_mode = true
action_mode = 0
button_mask = 0
shortcut = SubResource("Shortcut_xpydi")
texture_normal = ExtResource("4_seqyf")
texture_pressed = ExtResource("5_covew")
script = ExtResource("6_8abxr")

[node name="Icon" type="Sprite2D" parent="Dices/Dice1"]
position = Vector2(50, 50)

[node name="Dice2" type="TextureButton" parent="Dices"]
offset_left = 100.0
offset_right = 200.0
offset_bottom = 100.0
focus_mode = 0
toggle_mode = true
action_mode = 0
button_mask = 0
shortcut = SubResource("Shortcut_2hsbf")
texture_normal = ExtResource("4_seqyf")
texture_pressed = ExtResource("5_covew")
script = ExtResource("6_8abxr")

[node name="Icon" type="Sprite2D" parent="Dices/Dice2"]
position = Vector2(50, 50)

[node name="Dice3" type="TextureButton" parent="Dices"]
offset_left = 200.0
offset_right = 300.0
offset_bottom = 100.0
focus_mode = 0
toggle_mode = true
action_mode = 0
button_mask = 0
shortcut = SubResource("Shortcut_2eif3")
texture_normal = ExtResource("4_seqyf")
texture_pressed = ExtResource("5_covew")
script = ExtResource("6_8abxr")

[node name="Icon" type="Sprite2D" parent="Dices/Dice3"]
position = Vector2(50, 50)

[node name="Dice4" type="TextureButton" parent="Dices"]
offset_top = 100.0
offset_right = 100.0
offset_bottom = 200.0
focus_mode = 0
toggle_mode = true
action_mode = 0
button_mask = 0
shortcut = SubResource("Shortcut_kbdob")
texture_normal = ExtResource("4_seqyf")
texture_pressed = ExtResource("5_covew")
script = ExtResource("6_8abxr")

[node name="Icon" type="Sprite2D" parent="Dices/Dice4"]
position = Vector2(50, 50)

[node name="Dice5" type="TextureButton" parent="Dices"]
offset_left = 100.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 200.0
focus_mode = 0
toggle_mode = true
action_mode = 0
button_mask = 0
shortcut = SubResource("Shortcut_3fgaf")
texture_normal = ExtResource("4_seqyf")
texture_pressed = ExtResource("5_covew")
script = ExtResource("6_8abxr")

[node name="Icon" type="Sprite2D" parent="Dices/Dice5"]
position = Vector2(50, 50)

[node name="Dice6" type="TextureButton" parent="Dices"]
offset_left = 200.0
offset_top = 100.0
offset_right = 300.0
offset_bottom = 200.0
focus_mode = 0
toggle_mode = true
action_mode = 0
button_mask = 0
shortcut = SubResource("Shortcut_evova")
texture_normal = ExtResource("4_seqyf")
texture_pressed = ExtResource("5_covew")
script = ExtResource("6_8abxr")

[node name="Icon" type="Sprite2D" parent="Dices/Dice6"]
position = Vector2(50, 50)

[node name="ActionButtons" type="Node2D" parent="."]

[node name="Atak" type="Button" parent="ActionButtons"]
offset_left = -200.0
offset_right = -100.0
offset_bottom = 100.0
shortcut = SubResource("Shortcut_rhfiy")
icon = ExtResource("7_bocvb")
expand_icon = true
script = ExtResource("8_2bhmu")
metadata/_edit_use_anchors_ = true

[node name="Atak_Plus" type="Button" parent="ActionButtons"]
offset_left = -100.0
offset_bottom = 100.0
shortcut = SubResource("Shortcut_g3nbu")
icon = ExtResource("9_00qxl")
expand_icon = true
script = ExtResource("8_2bhmu")
action = 1
metadata/_edit_use_anchors_ = true

[node name="Obrona" type="Button" parent="ActionButtons"]
offset_left = -200.0
offset_top = 100.0
offset_right = -100.0
offset_bottom = 200.0
shortcut = SubResource("Shortcut_ggk13")
icon = ExtResource("10_cwe2b")
expand_icon = true
script = ExtResource("8_2bhmu")
action = 2
metadata/_edit_use_anchors_ = true

[node name="Obrona_Plus" type="Button" parent="ActionButtons"]
offset_left = -100.0
offset_top = 100.0
offset_bottom = 200.0
shortcut = SubResource("Shortcut_0pd6j")
icon = ExtResource("11_wp3wu")
expand_icon = true
script = ExtResource("8_2bhmu")
action = 3
metadata/_edit_use_anchors_ = true

[node name="Special1" type="Button" parent="ActionButtons"]
anchors_preset = -1
anchor_left = 1.5
anchor_top = 2.0
anchor_right = 1.5
anchor_bottom = 2.0
offset_right = 100.0
offset_bottom = 100.0
shortcut = SubResource("Shortcut_g0snw")
icon = ExtResource("12_0plxn")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("8_2bhmu")
action = 4
metadata/_edit_use_anchors_ = true

[node name="Special2" type="Button" parent="ActionButtons"]
anchors_preset = -1
anchor_left = 1.5
anchor_top = 2.0
anchor_right = 1.5
anchor_bottom = 2.0
offset_left = 100.0
offset_right = 200.0
offset_bottom = 100.0
shortcut = SubResource("Shortcut_g0snw")
icon = ExtResource("12_0plxn")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("8_2bhmu")
action = 5
metadata/_edit_use_anchors_ = true

[node name="Special3" type="Button" parent="ActionButtons"]
anchors_preset = -1
anchor_left = 1.5
anchor_top = 2.0
anchor_right = 1.5
anchor_bottom = 2.0
offset_top = 100.0
offset_right = 100.0
offset_bottom = 200.0
shortcut = SubResource("Shortcut_g0snw")
icon = ExtResource("12_0plxn")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("8_2bhmu")
action = 6
metadata/_edit_use_anchors_ = true

[node name="Special4" type="Button" parent="ActionButtons"]
anchors_preset = -1
anchor_left = 1.5
anchor_top = 2.0
anchor_right = 1.5
anchor_bottom = 2.0
offset_left = 100.0
offset_top = 100.0
offset_right = 200.0
offset_bottom = 200.0
shortcut = SubResource("Shortcut_g0snw")
icon = ExtResource("12_0plxn")
icon_alignment = 1
vertical_icon_alignment = 0
expand_icon = true
script = ExtResource("8_2bhmu")
action = 7
metadata/_edit_use_anchors_ = true

[node name="ActionDescription" type="RichTextLabel" parent="ActionButtons"]
offset_left = -215.0
offset_top = 210.0
offset_right = -140.0
offset_bottom = 250.0
fit_content = true
metadata/_edit_use_anchors_ = true

[node name="Camera2D" type="Camera2D" parent="."]

[node name="Player" type="Node" parent="."]
script = ExtResource("13_neu1h")

[node name="Stats" type="Node2D" parent="Player" node_paths=PackedStringArray("health_display", "armor_display")]
script = ExtResource("13_rpiqy")
max_health = 100
health_display = NodePath("HpDisplay")
armor_display = NodePath("ArmorDisplay/text")

[node name="ArmorDisplay" type="Node2D" parent="Player/Stats"]
position = Vector2(-513, -260)

[node name="icon" type="Sprite2D" parent="Player/Stats/ArmorDisplay"]
position = Vector2(730, 268)
scale = Vector2(0.5, 0.5)
texture = ExtResource("10_cwe2b")

[node name="text" type="RichTextLabel" parent="Player/Stats/ArmorDisplay"]
offset_left = 750.0
offset_top = 255.0
offset_right = 790.0
offset_bottom = 295.0
text = "0"
metadata/_edit_use_anchors_ = true

[node name="HpDisplay" type="ProgressBar" parent="Player/Stats"]
offset_left = -138.0
offset_top = 210.0
offset_right = 376.0
offset_bottom = 277.0
scale = Vector2(0.575032, 0.575032)
step = 1.0
script = SubResource("GDScript_5vr14")
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="Roll" to="Dices" method="RollOrReroll"]
[connection signal="mouse_entered" from="ActionButtons/Atak" to="ActionButtons/Atak" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionButtons/Atak" to="ActionButtons/Atak" method="_on_mouse_exited"]
[connection signal="pressed" from="ActionButtons/Atak" to="ActionButtons/Atak" method="_on_button_press"]
[connection signal="mouse_entered" from="ActionButtons/Atak_Plus" to="ActionButtons/Atak_Plus" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionButtons/Atak_Plus" to="ActionButtons/Atak_Plus" method="_on_mouse_exited"]
[connection signal="pressed" from="ActionButtons/Atak_Plus" to="ActionButtons/Atak_Plus" method="_on_button_press"]
[connection signal="mouse_entered" from="ActionButtons/Obrona" to="ActionButtons/Obrona" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionButtons/Obrona" to="ActionButtons/Obrona" method="_on_mouse_exited"]
[connection signal="pressed" from="ActionButtons/Obrona" to="ActionButtons/Obrona" method="_on_button_press"]
[connection signal="mouse_entered" from="ActionButtons/Obrona_Plus" to="ActionButtons/Obrona_Plus" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionButtons/Obrona_Plus" to="ActionButtons/Obrona_Plus" method="_on_mouse_exited"]
[connection signal="pressed" from="ActionButtons/Obrona_Plus" to="ActionButtons/Obrona_Plus" method="_on_button_press"]
[connection signal="mouse_entered" from="ActionButtons/Special1" to="ActionButtons/Special1" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionButtons/Special1" to="ActionButtons/Special1" method="_on_mouse_exited"]
[connection signal="pressed" from="ActionButtons/Special1" to="ActionButtons/Special1" method="_on_button_press"]
[connection signal="mouse_entered" from="ActionButtons/Special2" to="ActionButtons/Special2" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionButtons/Special2" to="ActionButtons/Special2" method="_on_mouse_exited"]
[connection signal="pressed" from="ActionButtons/Special2" to="ActionButtons/Special2" method="_on_button_press"]
[connection signal="mouse_entered" from="ActionButtons/Special3" to="ActionButtons/Special3" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionButtons/Special3" to="ActionButtons/Special3" method="_on_mouse_exited"]
[connection signal="pressed" from="ActionButtons/Special3" to="ActionButtons/Special3" method="_on_button_press"]
[connection signal="mouse_entered" from="ActionButtons/Special4" to="ActionButtons/Special4" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="ActionButtons/Special4" to="ActionButtons/Special4" method="_on_mouse_exited"]
[connection signal="pressed" from="ActionButtons/Special4" to="ActionButtons/Special4" method="_on_button_press"]
